[package]
name = "monaco-editor"
version = "0.1.0"
authors = ["Taggart Software LLC <support@ctaggart.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "*"
js-sys = "*"
web-sys = { version = "*", features = [ "HtmlElement", "KeyboardEvent", "MouseEvent", "Worker" ] }

[dev-dependencies]
wasm-bindgen-test = "*"